@@ -1,6 +1,6 @@
 package com.depromeet.reunion.server.domain.post.service;
 
-import com.depromeet.reunion.server.domain.post.dto.BoardResponseDto;
+import com.depromeet.reunion.server.domain.post.dto.response.BoardResponseDto;
 import com.depromeet.reunion.server.domain.post.entity.Board;
 import com.depromeet.reunion.server.domain.post.repository.BoardRepository;
 import lombok.RequiredArgsConstructor;
@@ -8,7 +8,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,7 +18,7 @@ public class BoardServiceImpl implements BoardService {
     @Override
     public List<BoardResponseDto> getAllBoards() {
         List< Board> boards = boardRepository.findAll();
-        return boards.stream().map(BoardResponseDto::new).collect(Collectors.toList());
+        return boards.stream().map(BoardResponseDto::new).toList();
     }
 
     @Override
